@@ -141,6 +141,8 @@ ks.test <-
         ## </FIXME>
     }
 
+    ## fix up possible overshoot (PR#14671)
+    PVAL <- min(1.0, max(0.0, PVAL))
     RVAL <- list(statistic = STATISTIC,
                  p.value = PVAL,
                  alternative = nm_alternative,
